# serializer version: 1
# name: test_routes[/en/about-skbl]
  '''
  <!doctype html>
  <html lang="en">
    <head>
      
      <title>skbl.se - About SKBL</title>
      <meta nam
  '''
# ---
# name: test_routes[/en]
  '''
  <!doctype html>
  <html lang="en">
    <head>
      
      <title>skbl.se - Svenskt kvinnobiografiskt lexiko
  '''
# ---
# name: test_routes[/sv/om-skbl]
  '''
  <!doctype html>
  <html lang="sv">
    <head>
      
      <title>skbl.se - Om SKBL</title>
      <meta name="
  '''
# ---
# name: test_routes[/sv]
  '''
  <!doctype html>
  <html lang="sv">
    <head>
      
      <title>skbl.se - Svenskt kvinnobiografiskt lexiko
  '''
# ---
